--- a/package.json
+++ b/package.json
@@ -8,15 +8,28 @@
   "license": "MIT",
   "scripts": {
     "test": "tape -r babel-register src/**/*.spec.js",
-    "build": "babel src/ --out-dir lib/ --ignore __tests__"
+    "lint": "eslint 'src/**/*.js'",
+    "build": "babel src/ --out-dir lib/ --ignore __tests__",
+    "clean": "rimraf lib dist",
+    "prepublish": "npm test && npm run clean && npm run lint && npm run build"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
+    "enzyme": "^2.9.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.6.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "rimraf": "^2.6.1",
+    "styled-components": "^2.1.0",
     "tape": "^4.6.3"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "styled-components": "^2.1.0"
   }
 }
