Add a bunch of implementation 2

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-import": "^2.6.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
     "rimraf": "^2.6.1",
     "styled-components": "^2.1.0",
     "tape": "^4.6.3"
