--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint 'src/**/*.js'",
     "build": "babel src/ --out-dir lib/ --ignore __tests__",
     "clean": "rimraf lib dist",
-    "prepublish": "npm test && npm run clean && npm run lint && npm run build"
+    "prepare": "npm test && npm run clean && npm run lint && npm run build"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
